Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
   font-size: 1rem;
   grid-template-rows: auto 1fr;
   margin: 0;
-  overflow-x: hidden;
+  overflow: hidden;
   padding: 0 1em;
   text-transform: uppercase;
 }
